--- a/cadastro.html
+++ b/cadastro.html
@@ -25,7 +25,7 @@
       <p>Seja bem vindo(a)!</p>
       <p>Preencha os campos para se cadastrar</p>
     </div>
-    <form action="https://psiwexer-nxqq.onrender.com/usuarios" method="POST">       
+    <form>       
       <div class="form-cadastro">
         <label for="nome">Nome</label>
         <input type="text" name="nome" id="nome" required placeholder="Daniel Silva"required>
@@ -49,7 +49,7 @@
     </div>
 
     <img src="logo (3).png" alt="Logo" class="logo">
-    <form class="form2" action="https://psiwexer-nxqq.onrender.com/usuarios" method="POST">       
+    <form class="form2">       
       <div class="form-cadastro1">
         <div>
           <label for="Senha">Senha</label>
