--- a/Inicio.html
+++ b/Inicio.html
@@ -76,7 +76,7 @@
         <span class="close" onclick="closeModal1()"><i
             class="ri-close-circle-fill"></i></span>
         <h2 class="newpacient">Novo paciente</h2>
-        <form id="form-paciente" action="http://localhost:3000/pacientes"
+        <form id="form-paciente" action="https://psiwexer-nxqq.onrender.com/pacientes"
           method="POST" class="input-lab">
 
           <div class="row">
