--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
         </form>
       </div>
     </div>
-    <script src="server/server.js"></script>
+       <script src="server/login.js"></script>
   </body>
 </html>
