--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </div>
           <div class="Form-login">
             <label for="senha">Senha</label>
-            <input type="password" id="senha" name="senha" placeholder="*********">
+            <input type="password" id="senha" name="password" placeholder="*********">
           </div>
           <div class="Form-login">
             <button type="button" id="entrar" class="entrar" onclick="minhaFuncao()">Entrar</button>
